# cheminfo-to-web

./: .gitignore  LICENSE  README.md  downloads.html  gh-page-mark  index.html
Inchi/inchi-js/: readme.txt
Inchi/inchi-js/benchmark/: inchiBenchmark.html
Inchi/inchi-js/gcc/: makefile
Inchi/inchi-js/make/: makefile  testDataBuilder
Inchi/inchi-js/src/: ichicomp.h  inchi_conv.c  inchi_js_utils.c  inchi_js_utils.h  pre.js  util.c
Indigo/Indigo-js/: indigoApiFuncs.txt  readme.txt
Indigo/Indigo-js/gcc/: makefile
Indigo/Indigo-js/make/: makefile
Indigo/Indigo-js/src/: indigoAdapter.js  indigoErrorHandler.c  pre.js
Indigo/Indigo-js/testDataBuilder/: indigoTestDataBuilder.cpp
Indigo/my_indigo_test/gcc/: 1.txt  makefile
Indigo/my_indigo_test/src/: CMakeLists.txt  main.cpp
OpenBabel/OpenBabel-js/: readme.txt
OpenBabel/OpenBabel-js/benchmark/: gen3DRunner.html  ioRunner.html
OpenBabel/OpenBabel-js/benchmark-cpp/src/: CMakeLists.txt  ioRunner.cpp
OpenBabel/OpenBabel-js/benchmark-js/: ioRunner.html
OpenBabel/OpenBabel-js/gcc/: makefile
OpenBabel/OpenBabel-js/make/: makefile
OpenBabel/OpenBabel-js/src/: io_runner.cpp  pre.js
OpenBabel/OpenBabel-js/testDataBuilder/src/: CMakeLists.txt
OpenBabel/OpenBabel_benchmarks/src/: ObWrapper.cpp  ioRunner.cpp
OpenBabel/my_openbabel_test/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
OpenBabel/my_openbabel_test/emcmake/: CMakeCache.txt  Makefile  cmake_install.cmake
OpenBabel/my_openbabel_test/gcc/: makefile
OpenBabel/my_openbabel_test/src/: CMakeLists.txt  conv.cpp
OpenBabel3/OpenBabel-js/: readme.txt
OpenBabel3/OpenBabel-js/benchmark-cpp/src/: CMakeLists.txt  ObWrapper.cpp  gen3DOpRunner.cpp
OpenBabel3/OpenBabel-js/benchmark-js/: gen3DRunner.html
OpenBabel3/OpenBabel-js/make/: makefile
OpenBabel3/OpenBabel-js/src/: io_runner.cpp  pre.js
OpenMD/OpenMD-js/: readme.txt
OpenMD/OpenMD-js/adapter_src/: ProgressBar.cpp  adapters.cpp  adapters.h
OpenMD/OpenMD-js/make/: makefile
OpenMD/OpenMD_js/: readme.txt
OpenMD/OpenMD_js/adapter_src/: adapters.cpp  adapters.h  jsWrapper.cpp  pre.js
OpenMD/OpenMD_js/make/: config.h  makefile
_unitTest/: index.html  openMDTest.html
_unitTest/_utils/: testUtils.js
_unitTest/data/indigo/: 1293.mol.indigo.json  aw00196.mol.indigo.json  big_semicube.mol.indigo.json  complexring3.mol.indigo.json  complexring7.mol.indigo.json  highvalence.mol.indigo.json  krabe.mol.indigo.json  krabe2.mol.indigo.json  legio_intr_mon.mol.indigo.json  legio_modes_mon_2.mol.indigo.json  (+3 more)
_unitTest/tests/: inchiTest.js  indigoTest.js  openBabelTest.js
_unitTests/: IndigoTest.html  inchiTest.html  index.html  openBabelTest.html  openMDTest.html
_unitTests/_libs/: inchi.js  indigo.js.mem
_unitTests/tests/: inchiTest.js  openBabelTest.js
demos/: index.html
demos/scripts/: demoUtils.js
docs/: index.html
libs/kekule/: kekule.min.js  openbabel.min.js  root.min.js
styles/: base.css  default.css  demos.css
(+295 files in other folders)
