cmake_minimum_required(VERSION 2.6)
set(CMAKE_BINARY_DIR, ../bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include_directories(~/programmer/OpenBabel3/OpenBabel-src/src/include)
include_directories(~/programmer/OpenBabel3/OpenBabel-src/build-linux/include)
add_executable(ioRunner ../src/ObWrapper.cpp ../src/ioRunner.cpp)
add_executable(gen3DRunner ../src/ObWrapper.cpp ../src/gen3DRunner.cpp)
add_executable(gen3DOpRunner ../src/ObWrapper.cpp ../src/gen3DOpRunner.cpp)
#target_link_libraries(ioRunner openbabel)
#target_link_libraries(ioRunner ~/programmer/OpenBabel3/OpenBabel-src/build-linux/lib/libopenbabel.so)
target_link_libraries(ioRunner ~/programmer/OpenBabel3/OpenBabel-src/build-linux/lib/libopenbabel.so)
target_link_libraries(gen3DRunner ~/programmer/OpenBabel3/OpenBabel-src/build-linux/lib/libopenbabel.so)
target_link_libraries(gen3DOpRunner ~/programmer/OpenBabel3/OpenBabel-src/build-linux/lib/libopenbabel.so)
